websocket-server/logs/websocket.log
/Users/agent-g/Windsurf/Twilio/websocket-server/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
src/server.ts(14,31): error TS2307: Cannot find module './twiml' or its corresponding type declarations.
src/server.ts(102,24): error TS2554: Expected 1 arguments, but got 0.

    at createTSError (/Users/agent-g/Windsurf/Twilio/websocket-server/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/Users/agent-g/Windsurf/Twilio/websocket-server/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/Users/agent-g/Windsurf/Twilio/websocket-server/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/Users/agent-g/Windsurf/Twilio/websocket-server/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/Users/agent-g/Windsurf/Twilio/websocket-server/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1699:10
    at Object.require.extensions.<computed> [as .ts] (/Users/agent-g/Windsurf/Twilio/websocket-server/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1313:32)
    at Function._load (node:internal/modules/cjs/loader:1123:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2307, 2554 ]
}
